login done, render items, show Containert

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Header */
+.main-header {
+  height: 15vw;
+  display: block;
+  background: #FFFFF0
+}
+.header-content{
+  padding: 20px 0px 0;
+  text-align: center;
+  max-width: 1148px;
+}
+.top-menu{
+  position: absolute;
+  right: 32px;
+  top: 26px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu-right{
+  display: block;
+  list-style: none;
+  text-align: left;
+}
+/* MODAL */
+.ui.modal{
+  text-align: center !important;
+  font-size: large !important;
+  width: 42vw !important;
+  height: 53vw !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* userform  */
+.user-form{
+  width: 100%;
+  padding: 7vw 4vw;
 }
