--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,15 @@ margin-top: 2vw !important
   width: 100vw;
   cursor: pointer !important;
 }
-
+.home-one-h1{
+  font-family: 'Kalam', cursive !important;
+  font-size: 3vw !important;
+  color: #ffcc66 !important;
+}
+.jumpsuit-home{
+  background-color: #ffcc66 !important;
+  border-style: dotted;
+}
 /*------------------------- About page ----------------------------------------*/
 .about-page{
   font-family: 'Caveat', cursive;
@@ -279,7 +287,7 @@ display: grid;
     margin-top: 2.5vw !important;
     margin-left: 10vw !important;
   }
-  .rev-modal{  
+  .rev-modal{
     width: 30vw !important;
     height: 40vh !important;
     background: url('./sketch2.jpg') !important
