--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@ font-family: 'Philosopher', sans-serif; */
 .App {
   text-align: center;
 }
+
+.show{
+  display: block;
+}
+
+.hide{
+  display: none
+}
 /* -------------------------------------Header--------------------------------- */
 .main-header {
   height: 15vw;
