font change for order

--- a/src/App.css
+++ b/src/App.css
@@ -367,8 +367,8 @@ margin-left: 10vw;
 }
 
 .order{
-  font-family: 'Sacramento', cursive;
-    font-size: 2vw;
+  font-family: 'Monda', sans-serif;
+    font-size: 1vw;
 }
 
 .order-card{
