font change for order

--- a/src/App.css
+++ b/src/App.css
@@ -373,7 +373,7 @@ margin-left: 10vw;
 
 .order-card{
   margin-top: 2vw;
-  font-family: 'Caveat', cursive !important;
+font-family: 'Monda', sans-serif;
     font-size: 1.5vw;
 }
 
