--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,9 @@ margin-left: 1.54vw;
 }
 
 /* userform  */
+.invalid-logins{
+  color: red;
+}
 .user-form{
   font-family: 'Simonetta', cursive;
   display: table;
